<resources>
    <string name="app_name">My Social Media</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_post">Add Post</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_nav_find_friends">Find Friends</string>
    <string name="menu_settings">Setting</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="id_create_an_account">Create Account</string>
    <string name="id_login_into_account">Login</string>

    <string name="setup_username">Username</string>
    <string name="setup_full_name">Full Name</string>
    <string name="setup_country">Country</string>
    <string name="setup_save_info">Save</string>
    <string name="progressBar_logging_text">Logging to user account</string>
    <string name="progressBar_loading_complete">Loading Complete</string>
    <string name="postActivity_writeSomething">Write something about you here</string>
    <string name="PostActivity_add_post_button">Add Post</string>
    <string name="postActivity_label">Update Post</string>
    <string name="all_post_user_name">User name</string>
    <string name="all_post_update_text">Post has being Updated at</string>
    <string name="all_post_date">Date</string>
    <string name="all_post_time">Time</string>
    <string name="all_post_description">Post Description</string>
</resources>
