<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/all_post_border"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/id_post_profileImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_post_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_post_user_name"
                android:padding="4dp"
                android:layout_marginLeft="4dp"
                android:textAlignment="textStart"
                android:textSize="@dimen/all_post_text_big_size"
                android:textStyle="bold"
                android:textColor="@color/common_google_signin_btn_text_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp">

                <TextView
                    android:id="@+id/id_post_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_post_update_text"
                    android:textSize="@dimen/all_post_text_small_size"
                    android:padding="4dp"/>

                <TextView
                    android:id="@+id/id_post_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_post_date"
                    android:textStyle="bold"
                    android:textSize="@dimen/all_post_text_small_size"
                    android:padding="4dp"/>

                <TextView
                    android:id="@+id/id_post_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_post_time"
                    android:textStyle="bold"
                    android:textSize="@dimen/all_post_text_small_size"
                    android:padding="4dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            android:id="@+id/id_post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/all_post_description"
            android:textSize="@dimen/all_post_text_small_size"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/id_post_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>
    </LinearLayout>

</LinearLayout>